--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,8 @@
 </head>
 <body class="m-3">
     {{{h1}}}
-    {{{body}}}
-
+    <div class="container">
+        {{{body}}}
+    </div>
 </body>
 </html>
