--- a/views/posts-index.handlebars
+++ b/views/posts-index.handlebars
@@ -1,6 +1,7 @@
 <div class="row ml-2 pl-4 text-primary">
   <h5 class="p-3">Reddit.js</h5>
-  <h5 class="p-3">New Post</h5><br>
+  <a href="/posts/new"><h5 class="p-3">New Post</h5></a><br>
+
 </div>
     <div class="row justify-content-center">
         <div class="col-sm-8 col-sm-offset-2">
@@ -13,6 +14,7 @@
                         <div class="text-right"><a href="/n/{{this.subreddit}}">{{this.subreddit}}</a></div>
                     </li>
                 {{/each}}
+
             </ul>
         </div>
     </div>
