Users can comment

--- a/views/posts-new.handlebars
+++ b/views/posts-new.handlebars
@@ -1,5 +1,10 @@
+<div class="row  ml-5 pl-4 text-primary">
+  <a href="/"><h5 class="p-3">Reddit.js</h5></a>
+  <a href="/posts/new"><h5 class="p-3">New Post</h5></a><br>
+</div>
+
 <div class="ml-1 row">
-  <div class="col-sm-4 col-sm-offset-4">
+  <div class="col-sm-4 m-2 ml-5 pl-5">
     <form action="/posts/new" method="post">
       <legend>New Post</legend>
       <div class="form-group">
