--- a/views/posts-index.handlebars
+++ b/views/posts-index.handlebars
@@ -1,20 +1,19 @@
-<div class="row ml-2 pl-4 text-primary">
-  <h5 class="p-3">Reddit.js</h5>
+<div class="row  ml-5 pl-4 text-primary">
+  <a href="/"><h5 class="p-3">Reddit.js</h5></a>
   <a href="/posts/new"><h5 class="p-3">New Post</h5></a><br>
-
 </div>
-    <div class="row justify-content-center">
-        <div class="col-sm-8 col-sm-offset-2">
-            <ul>
-                {{#each posts}}
-                    <li class="list-group-item">
-                        <div class="lead"><a href="/posts/{{this._id}}">{{this.title}}</a></div>
-                        <a href="{{this.url}}" target="_blank">{{this.url}}</a>
-                        <div class="text-right">{{this.subreddit}}</div>
-                        <div class="text-right"><a href="/n/{{this.subreddit}}">{{this.subreddit}}</a></div>
-                    </li>
-                {{/each}}
 
-            </ul>
-        </div>
+<div class="row justify-content-center">
+    <div class="col-sm-8 col-sm-offset-2">
+        <ul>
+            {{#each posts}}
+                <li class="list-group-item">
+                    <div class="lead"><a href="/posts/{{this._id}}">{{this.title}}</a></div>
+                    <a href="{{this.url}}" target="_blank">{{this.url}}</a>
+                    <div class="text-right">{{this.subreddit}}</div>
+                    <div class="text-right"><a href="/n/{{this.subreddit}}">{{this.subreddit}}</a></div>
+                </li>
+            {{/each}}
+        </ul>
     </div>
+</div>
