--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,7 +9,7 @@
         <label for="username">Username</label>
         <input type="text" class="form-control" name="username" id="username" aria-describedby="usernameHelp"
             placeholder="Enter Username">
-        <small id="usernameHelp" class="form-text text-muted">Mike Check</small>
+        <small id="usernameHelp" class="form-text text-muted">Check1</small>
     </div>
     <div class="form-group">
         <label for="password">Password</label>
